# TEST

./: .gitignore  .gitmodules  README.md  push.sh
c/: if.c
c/sock/: http.h  server.c
c/strtok&strstr/: strtok_r.c
cmake/a->b->c/a/: a.cpp
cmake/a->b->c/b/: CMakeLists.txt
cmake/a->b->c/c/: CMakeLists.txt
cmake/abc/a/: CMakeLists.txt
cmake/abc/b/: CMakeLists.txt  b.cpp
cmake/abc/c/: CMakeLists.txt  main.cpp
cmake/add_library/: CMakeLists.txt
cmake/add_library/sub/: CMakeLists.txt
cmake/diff-version/: CMakeLists.txt  main.cpp
cmake/diff-version/a-version1/: CMakeLists.txt  a.cpp
cmake/diff-version/a-version2/: CMakeLists.txt
cmake/diff-version/a-version2/version2/: a.cpp
cmake/diff-version/b/: CMakeLists.txt  b.cpp
cmake/diff-version/c/: CMakeLists.txt  c.cpp
cmake/exclude_from_all/: CMakeLists.txt
cmake/exclude_from_all/sub/: CMakeLists.txt
cmake/exclude_from_all/sub/subsub/: CMakeLists.txt  subsub.cpp
cmake/find_library/: CMakeLists.txt
cmake/foreach/: CMakeLists.txt
cmake/foreach/func_redefine/: CMakeLists.txt  test.cmake
cmake/target_include_directories/: CMakeLists.txt
cmake/target_include_directories/main/: CMakeLists.txt  main.cpp
cmake/target_include_directories/src/: CMakeLists.txt
cpp/: arg.cpp  cast.cpp  class.cpp  default-value.cpp  endian-2.cpp  endian.cpp  enum-class.cpp  explicit.cpp  flush.cpp  fn.cpp  for-map.cpp  lambda.cpp  map-iterator.cpp  monitor.cc  override  override.cpp  posix_memalign.cpp  quote.cpp  randBuf.cpp  reference.cpp  vector.cpp
cpp/aws/: s3.h  test.cpp
cpp/exam/baidu/: 1.cc  2.cc  3.cc
cpp/exam/mayi/: 2.cc  3.cc  t-1.cc  t-2.cc  test.cc
cpp/exam/meituan/: 1.cc  2.cc  3.cc  4.cc  5.cc
cpp/exam/pdd/: 1.cc  2.cc  3.cc  4.cc
cpp/fdb/: test.c  test.cpp
cpp/grpc/helloword/: CMakeLists.txt  Makefile  client.cpp  run.sh  server.cpp
cpp/include/: a.cpp  a.h  b.h
cpp/iostream/: cin.cpp  stringstream.cpp
cpp/json/: get.cpp
cpp/poco/: server  server.cpp
cpp/string/: address.cpp  malloc.cpp
cpp/string_view/: difference.cpp  malloc.cpp  pch.h  quote.cpp  string_append.cpp  stringstream.cpp
cpp/sys-monitor/: cpu.cpp  while.cpp
design_patterns/decorator/: djl.txt  input.h  test.cc
design_patterns/factory/: factory.h  test.cc
design_patterns/observer/: observer.h  questioner.h  respondent.h  test.cc
file/: fclose.c
golang/: hostname.go
python/: local-search.py  z3-solver.py
sh/: if.sh  while.sh
sock/: client.c
strtok&strstr/: parse_header  parse_header.c  strtok&strstr.c  strtok_r.c
(+3 files in other folders)
