# sub/CMakeLists.txt
cmake_minimum_required(VERSION 3.10.2)
project(sub)
add_library(sub test.cpp)
add_subdirectory(subsub)

message(STATUS "djldjdldjldjl")
message(STATUS "djldjdldjldjl")
message(STATUS "djldjdldjldjl")
message(STATUS "djldjdldjldjl")
message(STATUS "djldjdldjldjl")
message(STATUS "djldjdldjldjl")
